feat: enhance configuration and repository management
- Updated .gitignore to include IDE, OS generated, and temporary files.
- Added goreleaser configuration for building and releasing the project.
- Introduced comprehensive tests for configuration handling and repository operations.
- Implemented file writing and repository discovery functionalities.
- Enhanced warm-up logic for Go and Node.js projects.
- Improved error handling and reporting mechanisms.

This commit significantly improves the project's structure and testing coverage, ensuring better maintainability and usability.

--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,46 @@
 # Go workspace file
 go.work
 
-.idea
-*.file_bundle_rc
-*.bundle
-*.toml
-repo_work/
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
+# Build artifacts
+dist/
+build/
+repoll
+
+# Test coverage
+coverage.out
+coverage.html
+
+# Temporary files
+tmp/
+temp/
+
+# Jekyll
+docs/_site/
+docs/.sass-cache/
+docs/.jekyll-cache/
+docs/.jekyll-metadata
+docs/vendor/
+docs/Gemfile.lock
+
+# GoReleaser
+dist/
