--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,12 +1,16 @@
 source "https://rubygems.org"
 
 gem "jekyll", "~> 4.3.0"
-gem "minima", "~> 2.5"
+gem "minimal-mistakes-jekyll"
 
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
   gem "jekyll-sitemap"
   gem "jekyll-seo-tag"
+  gem "jekyll-paginate"
+  gem "jekyll-gist"
+  gem "jemoji"
+  gem "jekyll-include-cache"
 end
 
 platforms :mingw, :x64_mingw, :mswin, :jruby do
