refactor: restructure project and enhance configuration management
- Removed obsolete configuration and test files to streamline the codebase.
- Updated .gitignore to exclude unnecessary files and directories.
- Added new Makefile for build automation and improved project organization.
- Introduced a new main package structure for better clarity and maintainability.
- Enhanced documentation for API and usage examples.

This commit significantly improves the project's structure, making it more maintainable and user-friendly.

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ logs/
 # Build artifacts
 dist/
 build/
-repoll
+# repoll
 
 # Test coverage
 coverage.out
@@ -63,3 +63,4 @@ docs/Gemfile.lock
 
 # GoReleaser
 dist/
+**/test-repos/
