--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,24 +8,14 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
+    main: ./cmd/repoll
     goos:
       - linux
       - windows
       - darwin
     goarch:
-      - "386"
       - amd64
-      - arm
       - arm64
-    ignore:
-      - goos: darwin
-        goarch: "386"
-      - goos: windows
-        goarch: arm
-      - goos: windows
-        goarch: arm64
-    main: .
-    binary: repoll
     ldflags:
       - -s -w
       - -X main.version={{.Version}}
@@ -40,12 +30,10 @@ archives:
       {{- if eq .Arch "amd64" }}x86_64
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}
     format_overrides:
-      - goos: windows
-        format: zip
-    files:
-      - README.md
-      - LICENSE
+    - goos: windows
+      format: zip
 
 checksum:
   name_template: 'checksums.txt'
@@ -59,10 +47,6 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
-      - '^ci:'
-      - '^refactor:'
-      - Merge pull request
-      - Merge branch
 
 release:
   github:
